[package]
name = "logical_clock"
version = "0.1.3"
authors = ["Kaviraj <kavirajkanagaraj@gmail.com>"]
description = "Modern logical clocks implementation in Rust"
edition = "2018"
repository = "https://github.com/kavirajk/clock"
categories = ["distributed-systems", "logical-clocks"]
keywords = ["vector-clocks", "version-vector", "clock"]
license = "MIT"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanoid = "0.2.0"
